--- a/server/config.yaml
+++ b/server/config.yaml
@@ -81,9 +81,9 @@ zap:
   show-line: true
   stacktrace-key: stacktrace
 rabbit:
-  user: guest
-  password: guest
-  addr: localhost:5672
+  user: yuran
+  password: yuran
+  addr: 49.234.51.66:5672
 redis:
   addr: 127.0.0.1:6379
   db: 0
