--- a/server/config.yaml
+++ b/server/config.yaml
@@ -85,6 +85,6 @@ rabbit:
   password: yuran
   addr: 49.234.51.66:5672
 redis:
-  addr: 127.0.0.1:6379
+  addr: 49.234.51.66:6379
   db: 0
-  password: ""
+  password: "yuran"
